2003-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS

2003-08-21  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* configure.in:
	Update for 0.5.2.

2003-08-21  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Damn. Actually build the wave and FLAC encoders.

2003-08-19  Artur Flinta  <aflinta@cvs.gnome.org>

        * configure.in: Added "pl" to ALL_LINGUAS.

2003-08-15  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the tree model first, to avoid crashing when Reread is
	pressed, fixing #119890.

2003-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: (linux_bsd_media_type), (get_device_max_speed),
	(get_scsi_cd_name), (add_linux_cd_recorder), (linux_scan):
	* src/cd-drive.h: upd from libbacon, faster startup if a CD happened
	to be mounted in one of the CD drives

2003-08-11  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* configure.in:
	Version 0.5.1.

2003-08-11  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't exit if we can't find a CD-ROM drive.

2003-08-07  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	Added functions to free TrackDetails* and AlbumDetails*.

2003-08-07  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Free the previous album.

2003-08-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Add defaults for the file and path patterns.

	* src/sj-prefs.c:
	If we get null for the file and path patterns, hack in a
	default. Fixes a crash if the user hasn't set these preferences in
	earlier versions... whoops.

2003-08-04  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-08-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix a warning if actual track length is greater than the reported
	length.
	
	* src/sj-extractor.c:
	Use lowercase metadata tag names to work better with GStreamer.

	Thanks to Bastien again.

2003-07-31  Ross Burton  <ross@burtonini.com>
