@@ -1,3 +1,12 @@
+2003-08-24  Bastien Nocera  <hadess@hadess.net>
+
+	* src/sj-extractor.c: (sj_extractor_extract_track):
+	* src/sj-musicbrainz.c: (get_offline_track_listing),
+	(sj_musicbrainz_list_albums):
+	* src/sj-prefs.c: (pattern_label_update):
+	* src/sj-structures.h: add the maximum number of tracks on the album
+	inside the id3 tag/vorbis comment for the music management tools to use
+
 2003-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Added "no" to ALL_LINGUAS
